# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "express-option-chain"
version = "1.0.6"
description = "This library utilizes Kite Connect APIs to fetch the option chain of all the derivatives traded in the Indian stock market."
readme = "README.md"
authors = [{ name = "Prajwal Ramakrishna", email = "prajwaldr9@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["option-chain", "kite-option-chain", "nse-option-chain", "nse-options", "india-equity-options"]
dependencies = [
    "requests", "kiteconnect", "redis"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/pramakrishn/express-option-chain"